sort.pancake.lessons.sort.pancake.BubblePancake.scala.error
BubblePancake:3: error: not found: type int
def inverser(a:int,b:int){
               ^BubblePancake:3: error: not found: type int
def inverser(a:int,b:int){
                     ^BubblePancake:17: error: not found: value j
    for(i<- 0 to getTaillePile()-1-j){
                                   ^