sort.pancake.lessons.sort.pancake.BubblePancake.scala.code

def inverser(a:int,b:int){
  retourne(a+1);
  retourne(b+1);
  retourne(a+1);
}

def solve() {
  
  var trie = false;
  
  while(!trie){
    
    trie = true;
    
    for(i<- 0 to getTaillePile()-1-j){
      
      if(getRayonCrepe(i)>getRayonCrepe(i+1)){
        //Le plus petit ? gauche !
        inverser(i,i+1);
        trie = false;
      }
      
    }
    

    
  }
  
}